change "new static" to "override"

--- a/V4L2-for-NET/V4L2-for-NET.csproj
+++ b/V4L2-for-NET/V4L2-for-NET.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>V4L2_for_NET</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
